--- a/src/app/view/dashboard/dashboard.component.html
+++ b/src/app/view/dashboard/dashboard.component.html
@@ -1,6 +1,42 @@
 <div class="dashboard">
-    <div class="global-sales">
-      <app-thaicounty></app-thaicounty>
+
+  <div class="global-sales">
+    <div class="BoxTotal row">
+      <div class="col-sm-4">
+        <div class="Box1 card">
+          <div class="card-header card-header-danger">
+            <a style="font-size: 18px;">เอกสารตรวจสอบ</a>
+          </div>
+          <div class="card-body">
+            <p>2,569,789</p>
+          </div>
+          
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <div class="Box2 card">
+
+          <div class="card-header card-header-danger">
+            <a style="font-size: 18px;">เอกสารที่ถูกเซ็น</a>
+          </div>
+
+          <div class="card-body">
+            <p>1,987,654</p>
+          </div>
+
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <div class="Box3 card">
+          <div class="card-header card-header-danger">
+            <a style="font-size: 18px;">เอกสารที่ถูกเซ็น</a>
+          </div>
+          <div class="card-body">
+            <p>1,987,654</p>
+          </div>
+        </div>
+      </div>
     </div>
+    <app-thaicounty></app-thaicounty>
   </div>
-  
+</div>
