--- a/src/app/view/dashboard/dashboard.component.css
+++ b/src/app/view/dashboard/dashboard.component.css
@@ -1,4 +1,5 @@
 .dashboard {
+  padding-top: 60px;
     display: flex;
     flex-wrap: wrap;
 
@@ -67,4 +68,35 @@
     box-shadow: 0 4px 20px 0px rgba(0, 0, 0, 0.14), 0 7px 10px -5px rgba(244, 244, 54, 0.4);
     opacity: 1;
     
+}
+.BoxTotol{
+  position: relative;
+  height: 360px;
+  background-color: rgb(255, 209, 0);
+}
+.Box1,.Box2 ,.Box3{
+  height:250px;
+  width: auto;
+  background-color: white;
+  
+
+}
+.card-box{
+  position: relative;
+  margin-top: 10px;
+  padding: 0 10px 0 10px;
+}
+.card-header{
+  position: relative;
+  background-color: rgb(255, 209, 0);
+}
+.card-title{
+  font-family: "Sarabun", sans-serif;
+  font-size: 16px;
+  border-radius: 3px;
+  margin-top: -20px;
+  padding: 15px;
+  background-color: rgb(255, 209, 0);
+  box-shadow: 0 4px 20px 0px rgba(0, 0, 0, 0.14), 0 7px 10px -5px rgb(255, 209, 0,0.4);
+
 }
