--- a/src/assets/scss/core/_dropdown.scss
+++ b/src/assets/scss/core/_dropdown.scss
@@ -117,7 +117,7 @@
   a:focus,
   a:active {
     @include shadow-small-color($brand-primary);
-    background-color: $brand-primary;
+    background-color:rgba(255,209,0) ; //$brand-primary
     color: #FFFFFF;
   }
 }
