--- a/src/assets/scss/core/_misc.scss
+++ b/src/assets/scss/core/_misc.scss
@@ -22,7 +22,7 @@ legend {
 }
 
 a{
-  color: $link-color;
+  color:black ;/*$link-color*/
   &:hover,
   &:focus{
       color: darken($link-color, 5%);
