--- a/src/app/view/reportuser/reportuser.component.html
+++ b/src/app/view/reportuser/reportuser.component.html
@@ -12,6 +12,7 @@
             <th class="small-name">นามสกุล</th>
             <th class="small-name">อีเมล</th>
             <th class="small-cell">ตำเเหน่ง</th>
+            <th class="small-cell" style="color: black;  font-size: 16px; text-align: center;"><i class="fa fa-gear"></i></th>
           </tr>
         </thead>
         <tbody>
@@ -21,6 +22,12 @@
             <td class="small-name"> {{ users.lastname }} </td>
             <td class="small-name"> {{ users.email }} </td>
             <td class="small-cell"> {{ users.role }} </td>
+            <td class="small-cell-text">
+            <button (click)="openProfile(users.firstname,users.lastname)" style="border: none; background: none; color: black; text-align: center;" >
+              <i data-toggle="tooltip" title="ดูรายละเอียด" data-placement="top"
+                class="fa fa-file-text-o ModalIcon "></i>
+            </button>
+          </td>
             </tr>
           </tbody>
       </table>
