--- a/src/app/view/table-main/table-main.component.css
+++ b/src/app/view/table-main/table-main.component.css
@@ -39,6 +39,28 @@
     font-family:  'Sarabun', sans-serif; 
    
   }
+  .checkIcon{
+    display: flex;
+    width: auto;
+    padding: 4px 8px;
+    color:#449d44; 
+    background-color: #dcffdc;
+    border: 1px solid #449d44;
+    border-radius: 32px;
+    align-items: center;
+
+  }
+  .cancleIcon{
+    display: flex;
+    width: auto;
+    padding: 4px 8px;
+    color:#db1900; 
+     background-color: #fff0ee;;
+    border: 1px solid #db1900 ;
+    border-radius: 32px;
+    align-items: center;
+
+  }
   /* .searchLocation:hover{
     background: #dddfff;
     z-index: 30;
