--- a/src/app/view/dashboard/dashboard.component.html
+++ b/src/app/view/dashboard/dashboard.component.html
@@ -8,7 +8,7 @@
             <a style="font-size: 18px;">เอกสารตรวจสอบ</a>
           </div>
           <div class="card-body">
-            <p>2,569,789</p>
+            <div>2,569,789</div>
           </div>
           
         </div>
