--- a/src/app/view/profile/profile.component.html
+++ b/src/app/view/profile/profile.component.html
@@ -25,9 +25,24 @@
                           <input matInput placeholder="นามสกุล" type="text">
                         </mat-form-field>
                       </div>
-                      <div class="col-sm-6">
+                      <div class="col-sm-12">
                         <mat-form-field>
                           <input matInput placeholder="ที่อยู่" type="text">
+                        </mat-form-field>
+                      </div>
+                      <div class="col-md-4">
+                        <mat-form-field class="example-full-width">
+                          <input matInput placeholder="จังหวัด" type="text">
+                        </mat-form-field>
+                      </div>
+                      <div class="col-md-4">
+                        <mat-form-field class="example-full-width">
+                          <input matInput placeholder="ประเทศ" type="text">
+                        </mat-form-field>
+                      </div>
+                      <div class="col-md-4">
+                        <mat-form-field class="example-full-width">
+                          <input matInput placeholder="รหัสไปรษณีย์" type="text">
                         </mat-form-field>
                       </div>
                     </div>
