--- a/src/app/view/profile/profile.component.html
+++ b/src/app/view/profile/profile.component.html
@@ -1,8 +1,7 @@
 <div class="main-content">
   <div class="container-fluid">
 
-    <div class="row">
-      <div class="col-sm-11">
+
         <div class="card">
           <div class="card-header card-header-danger">
             <h4 class="card-title">การจัดการผู้ใช้งาน</h4>
@@ -10,44 +9,105 @@
 
           <div class="card-body">
             <div class="row">
-              <div class="col-sm-8">
+              <div class="col-sm-8" style="padding-left: 0;">
                 <div class="userInfo">
-                  <div class="title"> ข้อมูลผู้ใช้</div>
-                  <div class="user-content">
+                  <div class="title"> 
                     <div class="row">
-                      <div class="col-sm-6">
-                        <mat-form-field >
-                          <input matInput placeholder="ชื่อ" type="text">
-                        </mat-form-field>
+                      <div class="col-sm justify-content-start">
+                        ข้อมูลผู้ใช้
                       </div>
-                      <div class="col-sm-6">
-                        <mat-form-field>
-                          <input matInput placeholder="นามสกุล" type="text">
-                        </mat-form-field>
-                      </div>
-                      <div class="col-sm-12">
-                        <mat-form-field>
-                          <input matInput placeholder="ที่อยู่" type="text">
-                        </mat-form-field>
-                      </div>
-                      <div class="col-md-4">
-                        <mat-form-field class="example-full-width">
-                          <input matInput placeholder="จังหวัด" type="text">
-                        </mat-form-field>
-                      </div>
-                      <div class="col-md-4">
-                        <mat-form-field class="example-full-width">
-                          <input matInput placeholder="ประเทศ" type="text">
-                        </mat-form-field>
-                      </div>
-                      <div class="col-md-4">
-                        <mat-form-field class="example-full-width">
-                          <input matInput placeholder="รหัสไปรษณีย์" type="text">
-                        </mat-form-field>
+                      <div class="col-sm-1 justify-content-end">
+                        <div class="Edit" (click)="editProfile()">
+                          <i class="fa fa-pencil-square-o" ></i>
+                        </div>
+                        
                       </div>
                     </div>
                   </div>
+                  
+                  <div class="user-content">
+                    <div *ngIf="!EditStatus" class="user-data">
+                      <div class="row">
+
+                        <div class="col-sm-6">
+                          <div>
+                            ชื่อ {{ UserData?.firstname }} 
+                          </div>
+                        </div>
+                        <div class="col-sm-6">
+                          <div>
+                            นามสกุล <!--{{ UserData?.lasttname }}--> 
+                          </div>
+                        </div>
+                        <div class="col-sm-12">
+                          <div>
+                            ที่อยู่   <!--{{ UserData?.firstname }}-->
+                          </div>
+                        </div>
+                        <div class="col-md-4">
+                          <div class="example-full-width">
+                           
+                            จังหวัด   <!--{{ UserData?.firstname }}-->
+                          </div>
+                        </div>
+                        <div class="col-md-4">
+                          <div class="example-full-width">
+                            
+                            ประเทศ  <!--{{ UserData?.country }}-->
+                          </div>
+                        </div>
+                        <div class="col-md-4">
+                          <div class="example- full-width">
+                            รหัสไปรษณีย์ <!--{{ UserData?.posttCode }}-->
+                          </div>
+                        </div>
+
+                      </div>
+                    </div>
+                    <div *ngIf="EditStatus" class="userEdit">
+                      <form [formGroup]="UserInfoForm" (ngSubmit)="SaveUserInfo()">        
+                        <div class="row" >
+  
+                          <div class="col-sm-6">
+                            <mat-form-field>
+                              <input matInput placeholder="ชื่อ" formControlName="firstname"  type="text">
+                            </mat-form-field>
+                          </div>
+                          <div class="col-sm-6">
+                            <mat-form-field>
+                              <input matInput placeholder="นามสกุล" formControlName="lastname" type="text">
+                            </mat-form-field>
+                          </div>
+                          <div class="col-sm-12">
+                            <mat-form-field>
+                              <input matInput placeholder="ที่อยู่" formControlName="address" type="text">
+                            </mat-form-field>
+                          </div>
+                          <div class="col-md-4">
+                            <mat-form-field class="example-full-width">
+                              <input matInput placeholder="จังหวัด" formControlName="province" type="text">
+                            </mat-form-field>
+                          </div>
+                          <div class="col-md-4">
+                            <mat-form-field class="example-full-width">
+                              <input matInput placeholder="ประเทศ" formControlName="country" type="text">
+                            </mat-form-field>
+                          </div>
+                          <div class="col-md-4">
+                            <mat-form-field class="example-full-width">
+                              <input matInput placeholder="รหัสไปรษณีย์" formControlName="postalCode" type="text">
+                            </mat-form-field>
+                          </div>
+  
+                        </div>
+                        <button type="submit" class="btn btn-add">บันทึก</button>
+                        <button type="button" class="btn btn-danger" (click)="cancelEdit()">ยกเลิก</button>
+                      </form>
+                    </div>
+                   
+                  </div>
                 </div>
+
                 <div class="userContect">
                   <div class="title"> ข้อมูลติดต่อ</div>
                   <div class="user-content">
@@ -65,17 +125,17 @@
                     </div>
                   </div>
                 </div>
-              
-                
+
+
 
               </div>
-              <div class="col-sm-4">
+              <div class="col-sm-4" style="border: 1px solid black; border-radius: 5px; padding-left: 0; padding-right: 0; ">
                 <div class="card-profile">
                   <div class="card-avatar">
                     <a href="javascript:void(0)">
-                        <img class="img" src="./assets/img/faces/marc.jpg" />
+                      <img class="img" src="./assets/img/faces/marc.jpg" />
                     </a>
-                   </div>
+                  </div>
 
                 </div>
 
@@ -86,9 +146,8 @@
           </div>
         </div>
 
-      </div>
-    </div>
-      
+   
+
   </div>
 </div>
 
@@ -194,5 +253,3 @@
       </div>
   </div>
 </div> -->
-
-
