--- a/src/app/view/reportuser/reportuser.component.css
+++ b/src/app/view/reportuser/reportuser.component.css
@@ -1,25 +1,22 @@
-.card {
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    padding: 16px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    bottom: -50px;
-  }
+
   
-  .card-header {
-    font-size: 1.25rem;
-    margin-bottom: 8px;
+  .card-header{
+    position: relative;
+    background-color: rgb(255, 209, 0);
+    font-family: 'Sarabun',sans-serif;
   }
   
   .card-body {
     display: flex;
     flex-direction: column;
     gap: 16px;
+    font-family: 'Sarabun',sans-serif;
   }
   
   table {
     width: 100%;
     border-collapse: collapse;
+    font-family: 'Sarabun',sans-serif;
   }
   
   th, td {
@@ -40,3 +37,55 @@
     width: 50px; /* Adjust the width as needed */
     text-align: center;
   }
+  :host ::ng-deep .dataTables_wrapper .dataTables_paginate .paginate_button {
+    box-sizing: border-box;
+    display: inline-block;
+    min-width: 1.5em;
+    padding: 2px !important;
+    margin-left: 2px;
+    text-align: center;
+    text-decoration: none !important;
+    cursor: pointer;
+    color: inherit !important;
+    border: 1px solid transparent;
+    border-radius: 2px;
+    background: transparent;
+  }
+  
+  :host ::ng-deep .page-link{
+    position: relative;
+      display: block;
+      padding: 0.5rem 0.75rem;
+      margin-left: 0;
+      line-height: 1.25;
+      color: #000000;
+      background-color:white ;/*rgb(255, 219, 61)*/
+      border: 0 solid #dee2e6;
+      font-family:  'Sarabun', sans-serif;
+      opacity: 0.9;
+
+  }
+  :host ::ng-deep .page-link:hover{
+    position: relative;
+      display: flex;
+      padding: 0.5rem 0.75rem;
+      margin-left: 0;
+      line-height: 1.25;
+      color: black;
+      background-color: rgb(255, 219, 61);
+      border: 0 solid #dee2e6;
+      box-shadow: 0 4px 20px 0px rgba(0, 0, 0, 0.14), 0 7px 10px -5px rgba(244, 244, 54, 0.4);
+      font-family:  'Sarabun', sans-serif;
+      opacity: 1;
+  }
+
+  :host ::ng-deep .page-item.active .page-link {
+    z-index: 3;
+    color: black;
+    background-color: rgb(255, 209, 0);
+    border-color: rgb(232, 189, 0);
+    border-radius: 3px;
+    box-shadow: 0 4px 20px 0px rgba(0, 0, 0, 0.14), 0 7px 10px -5px rgba(244, 244, 54, 0.4);
+    opacity: 1;
+    
+}
