--- a/src/app/view/reportuser/reportprofile/reportprofile.component.css
+++ b/src/app/view/reportuser/reportprofile/reportprofile.component.css
@@ -2,38 +2,35 @@
 .main-content,
 .container-fluid {
   height: 100%;
+  font-family: 'Sarabun',sans-serif;
 }
 
-/* 2. Update .row to be centered */
-.row {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-}
 
-/* 3. Set .col-md-8 to occupy full height */
-.col-md-8 {
-  height: 100%;
-}
+
 
 /* 4. Add a border to .card and padding to .card-header */
-.card {
+/* .card {
   border: 1px solid #000;
-}
+} */
+
 
 .card-header {
   padding: 20px;
+  background-color: rgb(255, 209, 0);
+
 }
 
-/* 5. Update .card-header-danger background color */
+
+/* 5. Update .card-header-danger background color  linear-gradient(60deg,  rgb(255, 209, 0), #fcffc2) */
 .card-header-danger {
-  background: linear-gradient(60deg, #b71c1c, #ff8a80);
+  background:rgb(255, 209, 0);
+  font-family: 'Sarabun',sans-serif;
 }
 
 /* 6. Increase the font size of .card-title and .card-category */
 .card-title {
-  font-size: 24px;
+  font-size: 18px;
+  font-family: 'Sarabun',sans-serif;
 }
 
 .card-category {
@@ -61,4 +58,50 @@
   border-color: #d32f2f;
   font-size: 18px;
   padding: 15px 30px;
+}
+
+/*userInfo*/
+.title{
+  padding: 10px;
+  border-bottom: 1px solid rgb(189, 186, 186);
+}
+.userInfo{
+  margin-bottom: 10px;
+  border-radius: 5px;
+  border: 1px solid #000000;
+}
+.userContect{
+  border-radius: 5px;
+  border: 1px solid #000000;
+}
+.user-content{
+  padding: 10px;
+  font-family: 'Sarabun',sans-serif;
+}
+
+
+
+
+
+:host ::ng-deep textarea{
+  height: 100px;
+}
+::placeholder{
+  font-family: 'Sarabun',sans-serif;
+}
+:host ::ng-deep .form-control{
+  background-image: linear-gradient(to top, #000000 2px, rgba(156, 39, 176, 0) 2px), linear-gradient(to top, #d2d2d2 1px, rgba(210, 210, 210, 0) 1px);
+}
+:host ::ng-deep .btn-add{
+  color: #fff;
+  background-color: #24a0ed;/*#000dc2ef  */
+  border-color: #24a0ed85;;
+  /* box-shadow: 0 2px 2px 0 #0d6efd, 0 3px 1px -2px #0d6efd, 0 1px 5px 0 #0d6efd; */
+  font-family: 'Sarabun', sans-serif;
+
+}
+:host ::ng-deep .btn-add:hover{
+  background-color: #24a0ed; 
+  border-color: #00087c9f;
+  /* box-shadow: 0 14px 14px -12px #24a0ed51, 0 4px 14px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px #24a0ed51; */
 }
