--- a/src/app/view/reportuser/reportuser.component.html
+++ b/src/app/view/reportuser/reportuser.component.html
@@ -23,7 +23,7 @@
             <td class="small-name"> {{ users.email }} </td>
             <td class="small-cell"> {{ users.role }} </td>
             <td class="small-cell-text">
-            <button (click)="openProfile(users.firstname,users.lastname)" style="border: none; background: none; color: black; text-align: center;" >
+            <button (click)="getUserReportProfile(users.id)" style="border: none; background: none; color: black; text-align: center;" >
               <i data-toggle="tooltip" title="ดูรายละเอียด" data-placement="top"
                 class="fa fa-file-text-o ModalIcon "></i>
             </button>
