--- a/src/app/signature/signature.component.html
+++ b/src/app/signature/signature.component.html
@@ -11,7 +11,7 @@
   </div>
   <div class="card-body">
     <div class="col-12" *ngIf="loading">
-      <div>จำนวนหน้า : {{totalPage}} <input class="form-control col-4 col-sm-2 col-md-2 col-lg-1 mb-1" style="border: none;" type="number" [(ngModel)]="pageVariable" /></div>
+      <div>จำนวนหน้า : {{totalPage}} <input class="form-control  page-input" style="border: none;" type="number" [(ngModel)]="pageVariable" /></div>
       
 
 
