--- a/src/app/view/table-main/table-main.component.css
+++ b/src/app/view/table-main/table-main.component.css
@@ -45,9 +45,10 @@
     padding: 4px 8px;
     color:#449d44; 
     background-color: #dcffdc;
-    border: 1px solid #449d44;
+    /* border: 1px solid #449d44; */
     border-radius: 32px;
     align-items: center;
+    text-align: center;
 
   }
   .cancleIcon{
@@ -56,9 +57,10 @@
     padding: 4px 8px;
     color:#db1900; 
      background-color: #fff0ee;;
-    border: 1px solid #db1900 ;
+    /* border: 1px solid #db1900 ; */
     border-radius: 32px;
     align-items: center;
+    text-align: center;
 
   }
   /* .searchLocation:hover{
