--- a/src/app/view/dashboard/dashboard.component.css
+++ b/src/app/view/dashboard/dashboard.component.css
@@ -1,5 +1,5 @@
 .dashboard {
-  padding-top: 60px;
+  padding: 60px 15px;
     display: flex;
     flex-wrap: wrap;
 
@@ -16,7 +16,10 @@
   :host ::ng-deep .form-control{
     background-image: linear-gradient(to top, #000000 2px, rgba(156, 39, 176, 0) 2px), linear-gradient(to top, #d2d2d2 1px, rgba(210, 210, 210, 0) 1px);
   }
-
+.number{
+  height: 50px;
+  font-size: 3cqw;
+}
   :host ::ng-deep .dataTables_wrapper .dataTables_paginate .paginate_button {
     box-sizing: border-box;
     display: inline-block;
