--- a/src/app/view/dashboard/dashboard.component.html
+++ b/src/app/view/dashboard/dashboard.component.html
@@ -8,7 +8,7 @@
             <a style="font-size: 18px;">เอกสารตรวจสอบ</a>
           </div>
           <div class="card-body">
-            <div>2,569,789</div>
+            <div class="number">2,569,789</div>
           </div>
           
         </div>
@@ -29,7 +29,7 @@
       <div class="col-sm-4">
         <div class="Box3 card">
           <div class="card-header card-header-danger">
-            <a style="font-size: 18px;">เอกสารที่ถูกเซ็น</a>
+            <a style="font-size: 18px;">เอกสารที่ถูกสร้าง</a>
           </div>
           <div class="card-body">
             <p>1,987,654</p>
@@ -38,5 +38,6 @@
       </div>
     </div>
     <app-thaicounty></app-thaicounty>
+  <app-map></app-map>
   </div>
 </div>
