--- a/src/app/view/profile/profile.component.html
+++ b/src/app/view/profile/profile.component.html
@@ -30,35 +30,35 @@
                       <div class="row">
 
                         <div class="col-sm-6">
-                          <div>
+                          <div class="Info-text">
                             ชื่อ {{ UserData?.firstname }} 
                           </div>
                         </div>
                         <div class="col-sm-6">
-                          <div>
-                            นามสกุล <!--{{ UserData?.lasttname }}--> 
+                          <div class="Info-text">
+                            นามสกุล {{ UserData?.lastname }}
                           </div>
                         </div>
                         <div class="col-sm-12">
-                          <div>
-                            ที่อยู่   <!--{{ UserData?.firstname }}-->
+                          <div class="Info-text">
+                            ที่อยู่   {{ UserData?.firstname }}
                           </div>
                         </div>
                         <div class="col-md-4">
-                          <div class="example-full-width">
+                          <div class="Info-text">
                            
-                            จังหวัด   <!--{{ UserData?.firstname }}-->
+                            จังหวัด   {{ UserData?.firstname }}
                           </div>
                         </div>
                         <div class="col-md-4">
-                          <div class="example-full-width">
+                          <div class="Info-text">
                             
-                            ประเทศ  <!--{{ UserData?.country }}-->
+                            ประเทศ  {{ UserData?.country }}
                           </div>
                         </div>
                         <div class="col-md-4">
-                          <div class="example- full-width">
-                            รหัสไปรษณีย์ <!--{{ UserData?.posttCode }}-->
+                          <div class="Info-text">
+                            รหัสไปรษณีย์ {{ UserData?.postCode }}
                           </div>
                         </div>
 
@@ -111,18 +111,40 @@
                 <div class="userContect">
                   <div class="title"> ข้อมูลติดต่อ</div>
                   <div class="user-content">
-                    <div class="row">
-                      <div class="col-md-12">
-                        <mat-form-field class="example-full-width">
-                          <input matInput placeholder="อีเมล" type="email">
-                        </mat-form-field>
-                      </div>
-                      <div class="col-md-12">
-                        <mat-form-field class="example-full-width">
-                          <input matInput placeholder="เบอร์โทร" type="text">
-                        </mat-form-field>
+                    <div *ngIf="!EditStatus" class="user-data">
+                      <div class="row">
+
+                        <div class="col-sm-6">
+                          <div class="Info-text">
+                            อีเมล {{ UserData?.email }} 
+                          </div>
+                        </div>
+  
+                        <div class="col-sm-12">
+                          <div class="Info-text">
+                            เบอร์โทร   {{ UserData?.phone }}
+                          </div>
+                        </div>
+                    
+                   
+      
                       </div>
                     </div>
+                    <div *ngIf="EditStatus" class="user-edit">
+                      <div class="row">
+                        <div class="col-md-12">
+                          <mat-form-field class="example-full-width">
+                            <input matInput placeholder="อีเมล" type="email">
+                          </mat-form-field>
+                        </div>
+                        <div class="col-md-12">
+                          <mat-form-field class="example-full-width">
+                            <input matInput placeholder="เบอร์โทร" type="text">
+                          </mat-form-field>
+                        </div>
+                      </div>
+                    </div>
+                  
                   </div>
                 </div>
 
