--- a/src/app/view/table-main/table-main.component.html
+++ b/src/app/view/table-main/table-main.component.html
@@ -55,20 +55,20 @@
                 </thead>
                 <tbody>
                   <!---->
-                  <tr *ngFor="let item of items">
+                  <tr *ngFor="let item of items?.records ">
 
 
                     <td style=" text-align: center;">
 
-                      {{item.record_id}}
+                      {{item?.record_id}}
                     </td>
                     <td style=" white-space: nowrap;">
 
-                      {{item.record_topic }}
+                      {{item?.record_topic }}
                     </td>
                     <td style="vertical-align: middle; white-space: nowrap; text-align: center;">
 
-                      {{item.record_star_date | thaidate: "medium"}}
+                      {{item?.record_star_date | thaidate: "medium"}}
                     </td>
 
                     <td class="text-center" style=" white-space: nowrap;">
