--- a/src/app/view/table-main/table-main.component.html
+++ b/src/app/view/table-main/table-main.component.html
@@ -55,7 +55,7 @@
                 </thead>
                 <tbody>
                   <!---->
-                  <tr *ngFor="let item of items?.records ">
+                  <tr *ngFor="let item of items ">
 
 
                     <td style=" text-align: center;">
