--- a/src/app/view/profile/profile.component.html
+++ b/src/app/view/profile/profile.component.html
@@ -41,13 +41,13 @@
                         </div>
                         <div class="col-sm-12">
                           <div class="Info-text">
-                            ที่อยู่   {{ UserData?.firstname }}
+                            ที่อยู่   {{ UserData?.address }}
                           </div>
                         </div>
                         <div class="col-md-4">
                           <div class="Info-text">
                            
-                            จังหวัด   {{ UserData?.firstname }}
+                            จังหวัด   {{ UserData?.provine }}
                           </div>
                         </div>
                         <div class="col-md-4">
