--- a/src/app/layouts/auth-layout/register/register.component.css
+++ b/src/app/layouts/auth-layout/register/register.component.css
@@ -1,14 +1,21 @@
+:host {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding: 1rem;  /* เพิ่ม padding เพื่อความสวยงาม */
+}
+
 .register-card {
     background-color: #ffffff;
-    padding: 20px;
+    padding: 25px;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    width: 300px;
+    width: 600px;
     text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    position: relative;
+   
+  
   }
 
   .register-card h2{
@@ -39,6 +46,16 @@
     font-family: 'Sarabun', sans-serif;
   }
 
+  /*resume ประวิติ*/
+
+  .box:focus-within{
+    background-color: #f1f5ff;
+    border-radius: 5px;
+  }
+  .title{
+    display: flex;
+    justify-content: flex-start;
+  }
   /*invalidate style*/
   .error-text{
     font-size: 14px;
